force-app/main/default/objects/Case/fields/Accepted_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_delivery_date__c</fullName>
    <inlineHelpText>Enter the date the delivery team can commit to deliver the order</inlineHelpText>
    <label>Accepted delivery date</label>
    <type>Date</type>
</CustomField>