force-app/main/default/objects/Case/fields/Account_CVR__c.field-meta.xml
<CustomField>
    <fullName>Account_CVR__c</fullName>
    <formula>Account.CVR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CVR</label>
    <type>Text</type>
</CustomField>