force-app/main/default/objects/Case/fields/Activation_Line_Warning_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_Warning_Status__c</fullName>
    <description>Shows if any related Activation Lines have an error message</description>
    <formula>IF(
ISPICKVAL( Activation_Line_Warning_Trigger__c , &quot;Red&quot;),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 16, 16),
IF(
ISPICKVAL(Activation_Line_Warning_Trigger__c, &quot;Green&quot;),
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Green&quot;, 16, 16),
IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;, 16, 16)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Line Warning Status</label>
    <type>Text</type>
</CustomField>