force-app/main/default/objects/Case/fields/Activation_Line_Warning_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Activation_Line_Warning_Trigger__c</fullName>
    <label>Activation Line Warning Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>