force-app/main/default/objects/Case/fields/Activation_lines_generated__c.field-meta.xml
<CustomField>
    <fullName>Activation_lines_generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in process builder to make sure we only generate activations and activation lines automatically once.</description>
    <label>Activation lines generated</label>
    <type>Checkbox</type>
</CustomField>