force-app/main/default/objects/Case/fields/Activation_Quote__c.field-meta.xml
<CustomField>
    <fullName>Activation_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MK - 09092021 - CPQ-14 - the related activation quote created automatically.</description>
    <label>Activation Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Cases (Activation Quote)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>