force-app/main/default/objects/Case/fields/Active_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Portal_User__c</fullName>
    <formula>Contact.Active_Portal_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Portal User</label>
    <type>Checkbox</type>
</CustomField>