force-app/main/default/objects/Case/fields/AllActivationsReadyForQA__c.field-meta.xml
<CustomField>
    <fullName>AllActivationsReadyForQA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-230 Technical field used in POA process, if checked, POA attachment can be created. Updated by flow if all related Activations have at least &quot;Ready for QA&quot; Progress.</description>
    <label>AllActivationsReadyForQA</label>
    <type>Checkbox</type>
</CustomField>