force-app/main/default/objects/Case/fields/Awaiting_user__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set automatically whenever an email is received related to the case. The flag can also be set manually by the user. Flag is used to make it possible to show an image on listviews, in order for the case to stick out.</description>
    <label>Awaiting user</label>
    <type>Checkbox</type>
</CustomField>