force-app/main/default/objects/Case/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <description>The billing account number for the account related to this case.</description>
    <inlineHelpText>Use the billing account number to correctly bill the customer for the activated product(s).</inlineHelpText>
    <label>BAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>