force-app/main/default/objects/Case/fields/CABH__c.field-meta.xml
<CustomField>
    <fullName>CABH__c</fullName>
    <label>CABH</label>
    <summarizedField>Case_Status_Change__c.Status_Time__c</summarizedField>
    <summaryForeignKey>Case_Status_Change__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>