force-app/main/default/objects/Case/fields/CABH_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CABH_Indicator__c</fullName>
    <formula>IF( CABH__c &lt;= 5, 
    IMAGE(&quot;/resource/1454338417000/AR_Green_Icon&quot;, &quot;Green&quot;, 30, 30) , 
   IF(CABH__c &lt;= 10, 
     IMAGE(&quot;/resource/1454338381000/AR_Yellow_Icon&quot;, &quot;Yellow&quot;, 30, 30), 
     IMAGE(&quot;/resource/1454338453000/AR_Red_Icon&quot;, &quot;Red&quot;, 30, 30)
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CABH Indicator</label>
    <type>Text</type>
</CustomField>