force-app/main/default/objects/Case/fields/Cable_Sheet_Provided__c.field-meta.xml
<CustomField>
    <fullName>Cable_Sheet_Provided__c</fullName>
    <description>Used for Sales Enrichment!!!</description>
    <inlineHelpText>Please remember to add a Cable Sheet if you are working on a Fiber Activation Case</inlineHelpText>
    <label>Cable Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>