force-app/main/default/objects/Case/fields/Cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_date__c</fullName>
    <description>MK - 11.08.2021 - This is needed to know - in a easy way - when the circuit is being canceled. This can be used in a number of ways, but also for automatization.</description>
    <label>Cancellation date</label>
    <type>Date</type>
</CustomField>