force-app/main/default/objects/Case/fields/Case_Activation_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Case_Activation_Check_Result__c</fullName>
    <label>Activation Check Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>