force-app/main/default/objects/Case/fields/Case_Activation_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Activation_Check_Time__c</fullName>
    <label>Activation Check Time</label>
    <type>DateTime</type>
</CustomField>