force-app/main/default/objects/Case/fields/Case_age__c.field-meta.xml
<CustomField>
    <fullName>Case_age__c</fullName>
    <formula>TODAY() -   DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case age in days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>