force-app/main/default/objects/Case/fields/Case_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Date__c</fullName>
    <description>MK - 10.08.2021 - TSFDK-314 - Prints the date/time when the case was closed</description>
    <label>Case Closure Date</label>
    <type>DateTime</type>
</CustomField>