force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <description>Internal field used to display case owner in LDRD on case UI (Customer service app)</description>
    <formula>Owner:Queue.QueueName+&apos;&apos;+Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>