force-app/main/default/objects/Case/fields/case_reference__c.field-meta.xml
<CustomField>
    <fullName>case_reference__c</fullName>
    <description>ACTIVATION. The refenrence used by email to case - we use it on activations and activation lines too be able to relate emails sent from these custom objects to the case.</description>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to include in external web formulars to ensure information is related to the correct case in salesforce</inlineHelpText>
    <label>case reference</label>
    <type>Text</type>
</CustomField>