force-app/main/default/objects/Case/fields/Choose_Date__c.field-meta.xml
<CustomField>
    <fullName>Choose_Date__c</fullName>
    <description>TSFDK-138 - MK 09-06-2021 - The inserted date will be reflected in the Follow-up date field.</description>
    <label>Choose Date</label>
    <type>Date</type>
</CustomField>