force-app/main/default/objects/Case/fields/Clear_Follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Clear_Follow_up_date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-138 - MK 10-06-2021 - Used to clear the follow-up date.</description>
    <inlineHelpText>Check this to remove the follow-up date.</inlineHelpText>
    <label>Clear Follow-up date</label>
    <type>Checkbox</type>
</CustomField>