force-app/main/default/objects/Case/fields/Close_reason__c.field-meta.xml
<CustomField>
    <fullName>Close_reason__c</fullName>
    <description>CS. Reason for which the case was closed.</description>
    <inlineHelpText>Reason for which the case was closed.</inlineHelpText>
    <label>Close reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case solved</fullName>
            </value>
            <value>
                <fullName>No response from Customer</fullName>
            </value>
            <value>
                <fullName>Case dismissed (customer not entitled)</fullName>
            </value>
            <value>
                <fullName>Case solved (by redirected)</fullName>
                <isActive>false</isActive>
                <label>Case solved (by redirected)</label>
            </value>
            <value>
                <fullName>Talked to customer over phone</fullName>
                <isActive>false</isActive>
                <label>Talked to customer over phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>