force-app/main/default/objects/Case/fields/Closed_in_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Closed_in_Quarter__c</fullName>
    <description>Used for compensation purposes to calculate k12 amount of new sales on renewal quotes and from other channels and captured on closed won to use for calculation of changes made by Activation after close won as these needs to captured if they are made when quarter shift to capture differences in a &apos;bank&apos; function</description>
    <formula>IF(MONTH(DATEVALUE(ClosedDate)) &lt;= 3 &amp;&amp; YEAR(DATEVALUE(ClosedDate))=YEAR(TODAY()), 1,
IF(MONTH(DATEVALUE(ClosedDate)) &gt; 3 &amp;&amp; MONTH(DATEVALUE(ClosedDate)) &lt;= 6 &amp;&amp; YEAR(DATEVALUE(ClosedDate))=YEAR(TODAY()), 2,
IF(MONTH(DATEVALUE(ClosedDate)) &gt; 6 &amp;&amp; MONTH(DATEVALUE(ClosedDate)) &lt;= 9 &amp;&amp; YEAR(DATEVALUE(ClosedDate))=YEAR(TODAY()), 3,
IF(MONTH(DATEVALUE(ClosedDate)) &gt; 9 &amp;&amp; MONTH(DATEVALUE(ClosedDate)) &lt;= 12 &amp;&amp; YEAR(DATEVALUE(ClosedDate))=YEAR(TODAY()), 4,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed in Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>