force-app/main/default/objects/Case/fields/Company_billing_addess__c.field-meta.xml
<CustomField>
    <fullName>Company_billing_addess__c</fullName>
    <description>ACTIVATION. Billing address as displayed on Quote.</description>
    <formula>Quote__r.SBQQ__BillingStreet__c&amp;&quot;, &quot;&amp;Quote__r.SBQQ__BillingPostalCode__c&amp;&quot; &quot;&amp;Quote__r.SBQQ__BillingCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billing address as displayed on Quote</inlineHelpText>
    <label>Company billing addess</label>
    <type>Text</type>
</CustomField>