force-app/main/default/objects/Case/fields/Completion_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a Completion email is sent</description>
    <inlineHelpText>This field will be checked if the Completion email has been sent. Does not apply to Home Office, Fiber or 4G.</inlineHelpText>
    <label>Completion Email Sent</label>
    <type>Checkbox</type>
</CustomField>