force-app/main/default/objects/Case/fields/Complex_Configuration_Network_Setup__c.field-meta.xml
<CustomField>
    <fullName>Complex_Configuration_Network_Setup__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Complex_Configuration_Network_Setup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configuration / Network Setup</label>
    <type>Checkbox</type>
</CustomField>