force-app/main/default/objects/Case/fields/Complex_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Complex_Opportunity__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Complex_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complex Opportunity</label>
    <type>Checkbox</type>
</CustomField>