force-app/main/default/objects/Case/fields/Complex_Pricing_Contractual__c.field-meta.xml
<CustomField>
    <fullName>Complex_Pricing_Contractual__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Complex_Pricing_Contractual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing / Contractual</label>
    <type>Checkbox</type>
</CustomField>