force-app/main/default/objects/Case/fields/Complex_Size_of_Order__c.field-meta.xml
<CustomField>
    <fullName>Complex_Size_of_Order__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Complex_Size_of_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size of Order</label>
    <type>Checkbox</type>
</CustomField>