force-app/main/default/objects/Case/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <formula>TEXT( Quote__r.SBQQ__Opportunity2__r.Complexity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complexity</label>
    <type>Text</type>
</CustomField>