force-app/main/default/objects/Case/fields/Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked if the Order Confirmation Email is sent</description>
    <label>Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>