force-app/main/default/objects/Case/fields/Consider_project_manager__c.field-meta.xml
<CustomField>
    <fullName>Consider_project_manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies whether a project manager has been assigned to this case.</description>
    <inlineHelpText>In complex order fulfilment cases, a project manager should be assigned to assist with the order, e.g. if the order has a large K12 value or consists of many different products.</inlineHelpText>
    <label>Consider project manager</label>
    <type>Checkbox</type>
</CustomField>