force-app/main/default/objects/Case/fields/Contact_Note__c.field-meta.xml
<CustomField>
    <fullName>Contact_Note__c</fullName>
    <label>Contact Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>