force-app/main/default/objects/Case/fields/Contact_person__c.field-meta.xml
<CustomField>
    <fullName>Contact_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that is the main contact person for the case.</description>
    <inlineHelpText>The User that is the main contact person for the Case. Usually it is the Case creator, but any user that should respond to the Case can be selected.</inlineHelpText>
    <label>Contact person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>