force-app/main/default/objects/Case/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contract that was signed in order to begin this activation process.</description>
    <inlineHelpText>The contract that was signed in order to begin this activation process. Remember to check that this complies with the product(s) that are eventually activated.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>