force-app/main/default/objects/Case/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <description>ACTIVATION. Field used in reporting (for activation) to display the value of activation cases</description>
    <formula>Quote__r.Telia_Net_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>