force-app/main/default/objects/Case/fields/Contract_compliant__c.field-meta.xml
<CustomField>
    <fullName>Contract_compliant__c</fullName>
    <description>Specifies whether the activation case complies with the originally signed contract.</description>
    <inlineHelpText>Are the subscriptions activated in compliance with the agreed-upon contract. Usually this implies that the total billing price is within a 10% margin of the contract.</inlineHelpText>
    <label>Contract compliant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>