force-app/main/default/objects/Case/fields/Contract_discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Contract_discrepancy__c</fullName>
    <inlineHelpText>Indicate the discrepancy from the contract. The salesrep will be notified via email.</inlineHelpText>
    <label>Contract discrepancy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_compliant__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within +/- 10%</fullName>
            </value>
            <value>
                <fullName>More than 10% off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>