force-app/main/default/objects/Case/fields/Contract_form__c.field-meta.xml
<CustomField>
    <fullName>Contract_form__c</fullName>
    <inlineHelpText>Please remember to add a Contract if you are working on a Fiber Activation Case</inlineHelpText>
    <label>Contract form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed</fullName>
            </value>
            <value>
                <fullName>File attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>