force-app/main/default/objects/Case/fields/Contract_Responsible_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Responsible_Email__c</fullName>
    <description>ACTIVATION. Used on product activation in Tech</description>
    <formula>Quote__r.Authorised_to_Sign__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email on contact that has signed contract</inlineHelpText>
    <label>Contract Responsible Email</label>
    <type>Text</type>
</CustomField>