force-app/main/default/objects/Case/fields/Contract_Responsible_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Responsible_Name__c</fullName>
    <description>ACTIVATION. Used on product activation in Tech</description>
    <formula>Quote__r.Authorised_to_Sign__r.FirstName&amp;&quot; &quot;&amp;Quote__r.Authorised_to_Sign__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name on contract responsible</inlineHelpText>
    <label>Contract Responsible Name</label>
    <type>Text</type>
</CustomField>