force-app/main/default/objects/Case/fields/Contract_Responsible_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Responsible_Phone__c</fullName>
    <description>ACTIVATION. Used on product activation in Tech</description>
    <formula>Quote__r.Authorised_to_Sign__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile number on contract responsible</inlineHelpText>
    <label>Contract Responsible Phone</label>
    <type>Text</type>
</CustomField>