force-app/main/default/objects/Case/fields/Created_in_OW__c.field-meta.xml
<CustomField>
    <fullName>Created_in_OW__c</fullName>
    <formula>IF( OW_tickets__c &gt; 0 ,
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created in OW?</label>
    <type>Text</type>
</CustomField>