force-app/main/default/objects/Case/fields/Created_time__c.field-meta.xml
<CustomField>
    <fullName>Created_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created time</label>
    <type>DateTime</type>
</CustomField>