force-app/main/default/objects/Case/fields/Customer_Data_Provided__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Order_Fulfilment_Case - in status &apos;Sales Enrichment&apos;</description>
    <inlineHelpText>Please remember to add excel sheet with customer data</inlineHelpText>
    <label>Customer Data Provided</label>
    <type>Checkbox</type>
</CustomField>