force-app/main/default/objects/Case/fields/Days_since_closed__c.field-meta.xml
<CustomField>
    <fullName>Days_since_closed__c</fullName>
    <description>Returns the number of days since the case has been closed. For cases that have closed today 0 is returned, for cases not closed -1 is always returned.</description>
    <formula>IF(ISBLANK(ClosedDate), -1, Now() - ClosedDate)</formula>
    <inlineHelpText>Returns the number of days since the case has been closed. For cases that have closed today 0 is returned, for cases not closed -1 is always returned.</inlineHelpText>
    <label>Days since closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>