force-app/main/default/objects/Case/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <description>For Activation Cases (Order Fullfillment Cases) this is the dealer code of the user that created the activation.</description>
    <inlineHelpText>For Activation Cases (Order Fullfillment Cases) this is the dealer code of the user that created the activation.</inlineHelpText>
    <label>Dealer Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>