force-app/main/default/objects/Case/fields/DecisionMakerNotFound__c.field-meta.xml
<CustomField>
    <fullName>DecisionMakerNotFound__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.DecisionMakerNotFound__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Decision Maker NOT found</label>
    <type>Checkbox</type>
</CustomField>