force-app/main/default/objects/Case/fields/Description_empty__c.field-meta.xml
<CustomField>
    <fullName>Description_empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked if the Description field is empty</description>
    <label>Description empty</label>
    <type>Checkbox</type>
</CustomField>