force-app/main/default/objects/Case/fields/Enable_Product_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Enable_Product_Preferences__c</fullName>
    <description>Added for Business Internet</description>
    <label>Enable Product Preferences?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>