force-app/main/default/objects/Case/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>Date that this case is estimated to be closed.</description>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>