force-app/main/default/objects/Case/fields/eTray_number_s__c.field-meta.xml
<CustomField>
    <fullName>eTray_number_s__c</fullName>
    <label>eTray number(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>