force-app/main/default/objects/Case/fields/Expected_No_of_Connections__c.field-meta.xml
<CustomField>
    <fullName>Expected_No_of_Connections__c</fullName>
    <description>Added for Business Internet</description>
    <label>Expected Number of Connections</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>