force-app/main/default/objects/Case/fields/File_Attached__c.field-meta.xml
<CustomField>
    <fullName>File_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to use in the Voice Summary Flow to alert the delivery manager that on the case record a file has been uploaded. Should not be visible for the customer, so the field needs visibility OFF on them Customer Portal Profile</description>
    <label>File Attached</label>
    <type>Checkbox</type>
</CustomField>