force-app/main/default/objects/Case/fields/Fixed_Number_Series__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Number_Series__c</fullName>
    <description>TPX</description>
    <label>Fixed Number Series</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>