force-app/main/default/objects/Case/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>TSFDK-138 - MK 09-06-2021 - When the user will follow-up on the case. Handled by a process builder.</description>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>