force-app/main/default/objects/Case/fields/Has_been_closed__c.field-meta.xml
<CustomField>
    <fullName>Has_been_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for a workflow to mark cases as has been closed once, so that you can create a list view of all new cases that has been reopened</description>
    <inlineHelpText>This field is used for a workflow to mark cases as has been closed once, so that you can create a list view of all new cases that has been reopened</inlineHelpText>
    <label>Has been closed?</label>
    <type>Checkbox</type>
</CustomField>