force-app/main/default/objects/Case/fields/How_was_this_solved__c.field-meta.xml
<CustomField>
    <fullName>How_was_this_solved__c</fullName>
    <label>How was this solved?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>