force-app/main/default/objects/Case/fields/Implementation_Period__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Period__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Added for Business Internet</description>
    <label>Implementation Period (weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>