force-app/main/default/objects/Case/fields/Internet_Data_Gathering_Report__c.field-meta.xml
<CustomField>
    <fullName>Internet_Data_Gathering_Report__c</fullName>
    <description>ACTIVATION.</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O1i000001aicIEAQ/view?fv0=&quot;&amp; Id, &quot;Product Order Overview to Tech&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generates report to product setup with Telia Tech</inlineHelpText>
    <label>Internet Data Gathering Report</label>
    <type>Text</type>
</CustomField>