force-app/main/default/objects/Case/fields/Is_invoiced__c.field-meta.xml
<CustomField>
    <fullName>Is_invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box once invoicing is done</inlineHelpText>
    <label>Is invoiced</label>
    <type>Checkbox</type>
</CustomField>