force-app/main/default/objects/Case/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <description>Link to Jira ticket.</description>
    <inlineHelpText>Link to Jira ticket.</inlineHelpText>
    <label>Jira</label>
    <type>Url</type>
</CustomField>