force-app/main/default/objects/Case/fields/Last_Portal_User_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_User_Reminder_Date__c</fullName>
    <description>Newest date reminder was sent to portal user regarding this case.</description>
    <label>Last Portal User Reminder Date</label>
    <type>Date</type>
</CustomField>